--- a/src/02-component-patterns/styles/styles.module.css
+++ b/src/02-component-patterns/styles/styles.module.css
@@ -32,6 +32,10 @@
     border-radius: 5px 0px 0px 5px;
     font-size: 20px;
     width: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttonMinus:hover {
@@ -43,9 +47,12 @@
     border-top: 1px solid black;
     font-size: 16px;
     height: 25px;
-    padding-top: 5px;
     text-align: center;
     width: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttonAdd {
@@ -55,6 +62,10 @@
     border-radius: 0px 5px 5px 0px;
     font-size: 20px;
     width: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttonAdd:hover {
