--- a/src/02-component-patterns/styles/styles.module.css
+++ b/src/02-component-patterns/styles/styles.module.css
@@ -71,3 +71,9 @@
 .buttonAdd:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
+
+.buttonDisabled {
+    border-color: grey !important;
+    border-left: 1px solid white !important;
+    color: grey !important;
+}
